// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepHeader > should render 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex flex-col mb-8 hidden sm:block"
    >
      <ul
        class="flex flex-row gap-2"
      >
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="mb-1 flex items-center gap-3"
          >
            <div
              class="hidden sm:inline"
            />
            <h1
              class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="mt-0.5 flex items-center text-xs font-semibold leading-5 text-theme-secondary-text sm:mt-1 sm:text-sm sm:font-normal sm:leading-[17px] md:text-base md:leading-5"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
      <div
        class="flex flex-col mt-2 sm:mb-2 sm:hidden"
      >
        <ul
          class="flex flex-row gap-2"
        >
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render simple header without a provider 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="mb-1 flex items-center gap-3"
      >
        <div
          class="hidden sm:inline"
        />
        <h1
          class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
          data-testid="header__title"
        >
          title
        </h1>
      </div>
      <div
        class="mt-0.5 flex items-center text-xs font-semibold leading-5 text-theme-secondary-text sm:mt-1 sm:text-sm sm:font-normal sm:leading-[17px] md:text-base md:leading-5"
        data-testid="header__subtitle"
      >
        subtitle
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render with extra 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex flex-col mb-8 hidden sm:block"
    >
      <ul
        class="flex flex-row gap-2"
      >
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
        />
        <li
          class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="mb-1 flex items-center gap-3"
          >
            <div
              class="hidden sm:inline"
            />
            <h1
              class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="mt-0.5 flex items-center text-xs font-semibold leading-5 text-theme-secondary-text sm:mt-1 sm:text-sm sm:font-normal sm:leading-[17px] md:text-base md:leading-5"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
      <div
        class="mt-8 sm:mt-0"
      >
        extra
      </div>
      <div
        class="flex flex-col mt-2 sm:mb-2 sm:hidden"
      >
        <ul
          class="flex flex-row gap-2"
        >
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dim:bg-theme-dim-700 dark:bg-theme-secondary-800"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
